update a few titles

--- a/docs/mobile-app/getting-started.mdx
+++ b/docs/mobile-app/getting-started.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 3
 ---
 
-# Getting Started 
+# Mobile App - Getting Started 
 
 The BLE LoRa Mobile App enables users to configure, control, and update the firmware of the supported devices.
 It is available for both iOS on the App Store and Android on Google Play, see the store links below to install.
